@@ -30,7 +30,7 @@ class OutputModule(OurModule):
         self.name = 'outjson'
         self.desc = 'Output module for JSON arrays'
 
-        options.add_option('--outjson', action='append', dest='outjson',
+        options.add_argument('--outjson', action='append', dest='outjson',
                 help='sets the output file for JSON output')
 
     def write_output(self, data, options):
